--- a/index.html
+++ b/index.html
@@ -79,22 +79,23 @@
                     </div>
                     <div class="col-lg-6 mt-4 mt-lg-0">
                         <div class="personal-item ">
-                            <h2 class="mt-5 mb-0 base-color">Hi, I'm Elizabeth</h2>
+                            <h2 class="mt-4 mb-0 base-color">Hi, I'm Elizabeth</h2>
                             <h5 class="text-dark my-3">About me
                             </h5>
-                            <p>Hey:) I'm a grade 10 high school student, and here's my portfolio for ICS4U0</p>
+                            <p>Hey:) I'm a grade 10 high school student, and here's my portfolio for ICS4U0.</p>
                             <p>You can click on the portfolio to look a little bit more into my projects in school, but
                                 here are some of the things I've done in the past 6 months outside of school:</p>
-                            <p>1. &nbsp &nbsp Worked on a consulting project with Instacart, a $17B company</p>
+                            <p>1. &nbsp &nbsp Worked on a consulting project with Instacart, a $17B company.</p>
                             <p><span> 2. &nbsp &nbsp Created a new infant formula, by inserting plant grown antibodies
                                     into existing
                                     frozen infant formula. <a href="https://elizabethtrykin.medium.com/using-tobacco-plants-
                                     to-grow-antibodies-for-better-breastmilk-replication-f986f9096a0"> Here's a link to
-                                        an article</a></span>
+                                        an article.</a></span>
                             </p>
                             <p>3. &nbsp &nbsp And currently, I'm working on implementing a solution with UNESCO Vietnam
                                 and UN Women to
                                 increase girls' digital skills in rural Vietnam.</p>
+                            <p> Something interesting: A big part of my life is people, since I'm 99% extroverted according to a lot of personality tests. I love and thrive off of interaction with others. </p>
                         </div>
                     </div>
                 </div>
