--- a/webDesign.html
+++ b/webDesign.html
@@ -87,7 +87,7 @@
                         <li class="breadcrumb-item">
                             <a href="portfolio.html">Portfolio</a>
                         </li>
-                        <li class="breadcrumb-item">Arrays</li>
+                        <li class="breadcrumb-item">Web Design</li>
                     </ul>
                 </div>
             </div>
@@ -100,7 +100,7 @@
             <div class="row portfolio-single">
                 <div class="col-lg-12 mx-auto">
                     <div class="text-left">
-                        <h1 class="mb-4 h4">Arrays</h1>
+                        <h1 class="mb-4 h4">Web Design</h1>
                     </div>
                     <div class="entry-content box-border mt-4 col-lg-12 p-3 ml-10">
                         <div class="text-center">
@@ -109,55 +109,21 @@
                             </div>
                         </div>
                         <div class="text-left mt-4 mb-4 mr-4 ml-4">
-                            <p>Arrays are used for storing a certain number of elements of the same data type.
-                                They are most useful for storing variables that corrolate with one another, so
-                                that they can be easily accessed. For example, I could store student names in an
-                                array.
+                            <p>HTML stands for Hyper Text Markup Language and is used as the base language for creating
+                                web pages.
                             </p>
                             <div>
-                                <h6 class="base-color mb-0">How to declare an array</h6>
+                                <h6 class="base-color mb-0">Basic HTML Document structure</h6>
                             </div>
-                            <ul class="mt-4 checkmark-list mb-0">
-                                <li class="mb-2">
-                                    <span>Declaring an array - String [] arr = new String[n]; (where n is the
-                                        size of
-                                        the
-                                        array)</span>
-                                </li>
-                                <li class="mb-2">
-                                    <span>Initializing an array - String [] arr = new String{"Grace", "George",
-                                        "Athena"};</span>
-                                </li>
-                                <li class="mb-2">
-                                    <span>Accessing an index of an array - System.out.println(arr[0]); (would
-                                        print
-                                        Grace);</span>
-                                </li>
-                                <li class="mb-2">
-                                    <span>Printing out an entire array:</span>
-                                </li>
-                            </ul>
-                            <div class="ml-4 mb-0">
-                                <p>for (int i = 0; i &lt 3; i++) {</p>
+                            <div class="mt-4 mb-4">
+                                <div class="portfolio-single-item image-border">
+                                    <img src="assets/img/webDesign-01.png" class="d-block" alt="...">
+                                </div>
                             </div>
-                            <div class="ml-4 mt-0">
-                                <p>System.out.println(arr[i]); }</p>
-                            </div>
-                            <div>
-                                <h6 class="base-color mb-0">Common errors when using arrays</h6>
-                            </div>
-                            <ul class="mt-4 checkmark-list mb-0">
-                                <!-- Item-01 -->
-                                <li class="mb-2">
-                                    <span>ArrayIndexOutOfBounds - When for loop, if the loop increments beyond the last
-                                        index of the array (length - 1), the program will crash.</span>
-                                </li>
-                                <!-- Item-02 -->
-                                <li class="mb-2">
-                                    <span>Off-By-One - We naturally start counting at 1, by array indexes start at 0,
-                                        which means that in a loop, the index would start at 0.</span>
-                                </li>
-                            </ul>
+                            <p>Web pages also require css (adds design) and javascript (allows for interaction from
+                                user). For example, the colours on this screen were coded using css, and the button you
+                                will click on next is coded using javascript.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -165,31 +131,21 @@
                     <div class="text-center mt-4">
                         <div>
                             <h6>Code example</h6>
-                            <p>Code included was made in collaboration with Serena Bessette</p>
                         </div>
                     </div>
                     <div class="text-left mt-4 mb-4 mr-4 ml-4">
-                        <p>In the first step below, I declared and assigned sizes to 5 parallel arrays. This
-                            means that cat 1 would be at index 0 for all 5 arrays.</p>
+                        <p>Here is an example of the "head" section of the html document for this website</p>
                         <div class="mt-4 mb-4">
                             <div class="portfolio-single-item image-border">
-                                <img src="assets/img/Arrays-image1.jpg" class="d-block" alt="...">
+                                <img src="assets/img/webDesign-02.png" class="d-block" alt="...">
                             </div>
                         </div>
-                        <p>The purpose of this program was to use parallel arrays and compare cats, by different
-                            factors such as colour, breed, affection etc.</p>
-                        <p>In the first step above, I declared and assigned sizes to 5 parallel arrays. This means
-                            that
-                            cat 1 would be at index 0 for all 5 arrays.</p>
+                        <p>Here is the code for this sentence</p>
                         <div class="mt-4 mb-4">
                             <div class="portfolio-single-item image-border">
-                                <img src="assets/img/Arrays-image2.jpg" class="d-block" alt="...">
+                                <img src="assets/img/webDesign-03.png" class="d-block" alt="...">
                             </div>
                         </div>
-                        <p>The intention behind the display best method was for the program to look through and
-                            compare all 5 cats, to find the one with the highest score. I created a maxScore
-                            variable and a currentScore variable, and the if statement would change maxScore to
-                            equal currentScore if it's value was larger.</p>
                     </div>
                 </div>
             </div>
